# dbloada

./: CLAUDE.md  Cargo.toml  README.md
.claude/skills/component-diagram/: SKILL.md
.claude/skills/dbloada-component/: SKILL.md
.claude/skills/push-release/: SKILL.md
.github/workflows/: release.yml
src/: component_assembler.rs  main.rs
src/components/: mod.rs  test_helpers.rs
src/components/csv_parser/: csv_parser_impl.rs  mod.rs
src/components/db_loada_engine/: db_loada_engine_impl.rs  mod.rs
src/components/db_loada_project_io/: mod.rs  yaml_db_loada_project_io.rs
src/components/db_loada_project_serialization/: mod.rs  yaml_db_loada_project_serialization.rs
src/components/engine/: engine_impl.rs  mod.rs
src/components/file_system/: disk_file_system.rs  mod.rs
src/components/init/: init_impl.rs  mod.rs
src/components/load/: load_impl.rs  mod.rs
src/components/logger/: env_logger.rs  mod.rs  tokio_logger.rs
src/components/project_io/: mod.rs  yaml_project_io.rs
src/components/project_serialization/: mod.rs  yaml_project_serialization.rs
src/components/string_file/: disk_string_file.rs  mod.rs
src/components/table_reader/: cmd_csv_table_reader.rs  csv_table_reader.rs  mod.rs
src/models/: mod.rs  project.rs  table.rs
src/traits/: csv_parser.rs  db_loada_engine.rs  db_loada_project_io.rs  db_loada_project_serialization.rs  engine.rs  file_system.rs  init.rs  load.rs  logger.rs  mod.rs  project_io.rs  project_serialization.rs  string_file.rs  table_reader.rs
testdata/testproject/: dbloada.yaml
testdata/testproject/data/: cities.csv  (+2 more)
